// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with no parent comments 1`] = `
<div
  className="root ConversationThread-root"
  data-testid="comments-permalinkView-conversationThread"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
    comment={Object {}}
    highlight={true}
    me={Object {}}
    settings={Object {}}
    story={Object {}}
  />
</div>
`;

exports[`with 2 remaining parent comments renders correctly 1`] = `
<div
  className="root ConversationThread-root"
  data-testid="comments-permalinkView-conversationThread"
>
  <ForwardRef(forwardRef)
    container={
      <Line
        dotted={true}
      />
    }
  >
    <Circle>
      <RootParent
        createdAt="1995-12-17T03:24:00.000Z"
        id="root-parent"
        username="parentAuthor"
      />
    </Circle>
    <Circle
      className="ConversationThread-loadMore"
      hollow={true}
    >
      <ForwardRef(forwardRef)
        alignItems="center"
        itemGutter="half"
      >
        <Localized
          $count={2}
          id="comments-conversationThread-showHiddenComments"
        >
          <ForwardRef(forwardRef)
            disabled={false}
            id="comments-conversationThread-showHiddenComments"
            onClick={[Function]}
            variant="underlined"
          >
            Show hidden comments
          </ForwardRef(forwardRef)>
        </Localized>
        <withPropsOnChange(Counter)>
          2
        </withPropsOnChange(Counter)>
      </ForwardRef(forwardRef)>
    </Circle>
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)
    container={[Function]}
  >
    <Circle
      end={true}
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={Object {}}
        highlight={true}
        me={Object {}}
        settings={Object {}}
        story={Object {}}
      />
    </Circle>
  </ForwardRef(forwardRef)>
</div>
`;

exports[`with 2 remaining parent comments renders with disabled load more 1`] = `
<div
  className="root ConversationThread-root"
  data-testid="comments-permalinkView-conversationThread"
>
  <ForwardRef(forwardRef)
    container={
      <Line
        dotted={true}
      />
    }
  >
    <Circle>
      <RootParent
        createdAt="1995-12-17T03:24:00.000Z"
        id="root-parent"
        username="parentAuthor"
      />
    </Circle>
    <Circle
      className="ConversationThread-loadMore"
      hollow={true}
    >
      <ForwardRef(forwardRef)
        alignItems="center"
        itemGutter="half"
      >
        <Localized
          $count={2}
          id="comments-conversationThread-showHiddenComments"
        >
          <ForwardRef(forwardRef)
            disabled={true}
            id="comments-conversationThread-showHiddenComments"
            onClick={[Function]}
            variant="underlined"
          >
            Show hidden comments
          </ForwardRef(forwardRef)>
        </Localized>
        <withPropsOnChange(Counter)>
          2
        </withPropsOnChange(Counter)>
      </ForwardRef(forwardRef)>
    </Circle>
  </ForwardRef(forwardRef)>
  <ForwardRef(forwardRef)
    container={[Function]}
  >
    <Circle
      end={true}
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={Object {}}
        highlight={true}
        me={Object {}}
        settings={Object {}}
        story={Object {}}
      />
    </Circle>
  </ForwardRef(forwardRef)>
</div>
`;
